syntax = "proto3";

service UserHandler {
    rpc QueryUser (ClientRequest) returns (ServerResponse) {}
    rpc GetUserInfo (ClientRequest) returns (ServerResponse) {}
    rpc RegisterUser (ClientRequest) returns (ServerResponse) {}
    rpc UpdateUserLocation (ClientRequest) returns (ServerResponse) {}
    rpc DeleteUser (ClientRequest) returns (ServerResponse) {}
    rpc RequestAssociation (ClientRequest) returns (ServerResponse) {}
    rpc RequestDissociation (ClientRequest) returns (ServerResponse) {}
    rpc RequestSpidInfo (ClientRequest) returns (ServerResponse) {}
    rpc RequestLockChange (ClientRequest) returns (ServerResponse) {}
}

message ClientRequest {
    string id = 1;
    string type = 2;
    string body = 3;
}

message ServerResponse {
    string id = 1;
    string type = 2;
    bool ok = 3;
    string body = 4;
}