syntax = "proto3";

service SpidHandler {
    rpc QuerySpid (ClientRequest) returns (ServerResponse) {}
}

message ClientRequest {
    string id = 1;
    string type = 2;
    string body = 3;
}

message ServerResponse {
    string id = 1;
    string type = 2;
    bool ok = 3;
    string body = 4;
}