syntax = "proto3";
package protoBuffers;

import "spidDefinitions.proto";
import "userDefinitions.proto";

service SpidHandler {
    rpc GetSpidInfo (GetSpidRequest) returns (GetSpidResponse) {}
    rpc RegisterSpid (RegisterSpidRequest) returns (RegisterSpidResponse) {}
    rpc UpdateSpid (UpdateSpidRequest) returns (UpdateSpidResponse) {}
    rpc DeleteSpid (DeleteSpidRequest) returns (DeleteSpidResponse) {}
    rpc AddRemoteSpid (AddRemoteSpidRequest) returns (AddRemoteSpidResponse) {}
    rpc UpdateRemoteSpid (UpdateRemoteSpidRequest) returns (UpdateRemoteSpidResponse) {}
    rpc RemoveRemoteSpid (RemoveRemoteSpidRequest) returns (RemoveRemoteSpidResponse) {}

    rpc GetUserInfo (GetUserRequest) returns (GetUserResponse) {}
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc RequestAssociation (RequestAssociationRequest) returns (RequestAssociationResponse) {}
    rpc RequestDissociation (RequestDissociationRequest) returns (RequestDissociationResponse) {}
    rpc RequestSpidInfo (RequestSpidInfoRequest) returns (RequestSpidInfoResponse) {}
    rpc RequestLockChange (RequestLockChangeRequest) returns (RequestLockChangeResponse) {}
    rpc AddRemoteUser (AddRemoteUserRequest) returns (AddRemoteUserResponse) {}
    rpc UpdateRemoteUser (UpdateRemoteUserRequest) returns (UpdateRemoteUserResponse) {}
    rpc RemoveRemoteUser (RemoveRemoteUserRequest) returns (RemoveRemoteUserResponse) {}
    rpc GetRemoteSpids (GetRemoteSpidsRequest) returns (GetRemoteSpidsResponse) {}
}